--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,6 +19,21 @@
               <%= link_to @book.title, book_path(@book) %>
             </td>
             <td><%= @book.body %></td>
+            <td>
+              <% if @book.favorited_by?(current_user) %>
+                <%= link_to book_favorites_path(@book), method: :delete do %>
+                  <i class="fas fa-heart unlike"><%= @book.favorites.count %></i>
+                <% end %>
+              <% else %>
+                <%= link_to book_favorites_path(@book), method: :post do %>
+                  <i class="fas fa-heart like"><%= @book.favorites.count %></i>
+                <% end %>
+              <% end %>
+            </td>
+            <td>
+              <%= @book.book_comments.count %>
+            </td>
+
             <% if @user == current_user %>
               <td>
                 <%= link_to "Edit", edit_book_path(@book), class:"btn btn-sm btn-success" %>
@@ -30,6 +45,26 @@
           </tr>
         </tbody>
       </table>
+      <table>
+        <tbody>
+          <% @book.book_comments.each do |book_comment| %>
+            <tr>
+              <td>
+                <%= attachment_image_tag book_comment.user, :profile_image, fallback: "no_image.jpg", size: "40x40" %><br>
+                <%= book_comment.user.name %>
+              </td>
+              <td><%= book_comment.comment %></td>
+              <td><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class:"btn btn-danger btn-sm" %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <%= form_with model: [@book, @comment], local: true do |f| %>
+        <div class="form-group">
+          <%= f.text_area :comment, rows:"5", class:"form-control" %>
+          <%= f.submit "送信", class:"mt-2" %>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
