--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -11,7 +11,7 @@
           <tr>
             <th>image</th>
             <th>name</th>
-            <th colspan="3"></th>
+            <th colspan="4"></th>
           </tr>
         </thead>
         <tbody>
@@ -20,6 +20,15 @@
               <td><%= attachment_image_tag user, :profile_image, format: "jpeg", fallback: "no_image.jpg", size: "40x40" %></td>
               <td><%= user.name %></td>
               <td><%= link_to "Show", user_path(user) %></td>
+              <td>フォロー数:<%= user.active_relationships.count %></td>
+              <td>フォロワー数:<%= user.passive_relationships.count%></td>
+              <td>
+                <% if user.followed_by?(current_user) %>
+                  <%= link_to "フォロー外す", user_relationships_path(user) %>
+                <% else %>
+                  <%= link_to "フォローする", user_relationships_path(user) %>
+                <% end %>
+              </td>
             </tr>
           <% end %>
         </tbody>
