--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,7 +68,7 @@
         </div>
       </nav>
     </header>
-
+    <div class="text-center mt-3"><%= render "searches/search_form" %></div>
     <% if flash[:notice] %>
       <p class="notice"><%= flash[:notice] %></p>
     <% end %>
