--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,18 +19,10 @@
               <%= link_to @book.title, book_path(@book) %>
             </td>
             <td><%= @book.body %></td>
-            <td>
-              <% if @book.favorited_by?(current_user) %>
-                <%= link_to book_favorites_path(@book), method: :delete do %>
-                  <i class="fas fa-heart unlike"><%= @book.favorites.count %></i>
-                <% end %>
-              <% else %>
-                <%= link_to book_favorites_path(@book), method: :post do %>
-                  <i class="fas fa-heart like"><%= @book.favorites.count %></i>
-                <% end %>
-              <% end %>
+            <td class="favorite_btn_<%= @book.id %>">
+              <%= render "favorites/favorite", book: @book %>
             </td>
-            <td>
+            <td id="comment_count">
               <%= @book.book_comments.count %>
             </td>
 
@@ -46,20 +38,11 @@
         </tbody>
       </table>
       <table>
-        <tbody>
-          <% @book.book_comments.each do |book_comment| %>
-            <tr>
-              <td>
-                <%= attachment_image_tag book_comment.user, :profile_image, fallback: "no_image.jpg", size: "40x40" %><br>
-                <%= book_comment.user.name %>
-              </td>
-              <td><%= book_comment.comment %></td>
-              <td><%= link_to "Destroy", book_book_comment_path(book_comment.book, book_comment), method: :delete, class:"btn btn-danger btn-sm" %></td>
-            </tr>
-          <% end %>
+        <tbody id="comment_area">
+          <%= render "book_comments/comments", book: @book %>
         </tbody>
       </table>
-      <%= form_with model: [@book, @comment], local: true do |f| %>
+      <%= form_with model: [@book, @comment] do |f| %>
         <div class="form-group">
           <%= f.text_area :comment, rows:"5", class:"form-control" %>
           <%= f.submit "送信", class:"mt-2" %>
