--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -23,7 +23,7 @@
               <%= render "favorites/favorite", book: @book %>
             </td>
             <td id="comment_count">
-              <%= @book.book_comments.count %>
+              コメント数：<%= @book.book_comments.count %>
             </td>
 
             <% if @user == current_user %>
