--- a/app/views/book_comments/create.js.erb
+++ b/app/views/book_comments/create.js.erb
@@ -1,3 +1,3 @@
 $('#comment_area').html("<%= j(render "book_comments/comments", book: @book) %>")
-$('#comment_count').html("<%= @book.book_comments.count %>")
+$('#comment_count').html("コメント数：<%= @book.book_comments.count %>")
 $('textarea').val('')
