--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -30,4 +30,8 @@
     <% else %>
       <%= link_to "フォローする", user_relationships_path(user), method: :create, class: "btn btn-success" %>
     <% end %>
+    
+    <% if user.followed_by?(current_user) && current_user.followed_by?(user) %>
+      <%= link_to "chatを始める", chat_path(user) %>
+    <% end %>
   </div>
