--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,6 +30,29 @@
           <% end %>
         </tbody>
       </table>
+      <h3>投稿数の前日比・前週比</h3>
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <th>今日の投稿数</th>
+            <th>前日の投稿数</th>
+            <th>前日比</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td><%= @today_book.count %></td>
+            <td><%= @yesterday_book.count %></td>
+            <td>
+              <% if @yesterday_book.count == 0 %>
+                昨日の投稿数が0のため計算できねえ
+              <% else %>
+                <%= (@the_day_before * 100).round %>%
+              <% end %>
+            </td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
   </div>
