--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -12,6 +12,9 @@
           <%= f.label :Opinion %>
           <%= f.text_area :body, class:"form-control" %>
         </div>
+        <div class="form-group" id="star">
+          <%= f.hidden_field :rate, class:"form-control" %>
+        </div>
         <%= f.submit "Update Book", class:"btn btn-success" %>
       <% end %>
       <div class="mt-3">
@@ -22,3 +25,13 @@
     </div>
   </div>
 </div>
+ <script>
+    $('#star').raty({
+      starOn: "<%= asset_path('star-on.png') %>",
+      starOff: "<%= asset_path('star-off.png') %>",
+      starHalf: "<%= asset_path('star-half.png') %>",
+      scoreName: 'book[rate]',
+      score: <%= @book.rate %>,
+      readOnly: true,
+    });
+  </script>
