--- a/app/views/homes/category_search.html.erb
+++ b/app/views/homes/category_search.html.erb
@@ -2,13 +2,11 @@
   <%= render "books/error", model: @book %>
   <div class="row">
     <div class="col-md-3">
-      <%= render "users/info", user: @user %>
+      <%= render "users/info", user: current_user %>
       <%= render "books/form", book: @book %>
     </div>
     <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
-      <%= link_to "新しい順", books_path(sort: "created_at DESC") %> |
-      <%= link_to "評価の高い順", books_path(sort: "rate DESC") %>
       <table class="table table-hover table-inverse">
         <thead>
           <tr>
@@ -31,7 +29,7 @@
                 <%= link_to book.title, book_path(book) %>
               </td>
               <td><%= book.body %></td>
-              <td><%= link_to book.category, category_search_path  %></td>
+              <td><%= book.category %></td>
               <td class="favorite_btn_<%= book.id %>">
                 <%= render "favorites/favorite", book: book %>
               </td>
