--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -41,6 +41,10 @@
                     <i class="fas fa-sign-out-alt nav-link text-light"> logout</i>
                   <% end %>
                 </li>
+                <%= form_with url: category_search_path, method: :get, local: true do |f| %>
+                  <%= f.text_field :word %>
+                  <%= f.submit "検索", class: "btn btn-info" %>
+                <% end %>
               <% else %>
                 <li>
                   <%= link_to root_path do %>
