--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,6 +26,17 @@
                 <%= link_to book.title, book_path(book) %>
               </td>
               <td><%= book.body %></td>
+              <td class="star_<%= book.id %>"></td>
+              <script>
+                $('.star_<%= book.id %>').raty({
+                  starOn: "<%= asset_path('star-on.png') %>",
+                  starOff: "<%= asset_path('star-off.png') %>",
+                  starHalf: "<%= asset_path('star-half.png') %>",
+                  scoreName: 'book[rate]',
+                  score: <%= book.rate %>,
+                  readOnly: true,
+                });
+              </script>
             </tr>
           <% end %>
         </tbody>
